Creación de consultas, sus métodos y del método que creará la exportación de textos de PubMed a excel

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,10 +4,10 @@
     <div th:fragment="header-css">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-        <meta disease="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+        <meta diseases="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <meta disease="description" content="Test description"/>
-        <meta disease="author" content="PhD Student Gerardo Lagunes García"/>
+        <meta diseases="description" content="Test description"/>
+        <meta diseases="author" content="PhD Student Gerardo Lagunes García"/>
         <!--<link rel="icon" href="../../favicon.ico"/>-->
 
         <!-- CSS  -->
